--- a/index.html
+++ b/index.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday Card</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="body">
-      <div class="birthdayCard">
-        <div class="cardFront">
-          <img
-            src="https://github.com/DzarelDeveloper/Img/blob/main/ballon.png?raw=true"
-            class="balloons"
-            alt="balloons"
-          />
-          <img
-            src="https://github.com/DzarelDeveloper/Img/blob/main/hat.png?raw=true"
-            alt="bdHat"
-            class="bdHat"
-          />
-          <img
-              src="https://i.postimg.cc/Wpmgcqxr/R.png"
-              alt="cake"
-              class="cake"
-              />
-          <h2 class="happy">Happy Birthday Sweetie</h2>
-        </div>
-        <div class="cardInside">
-          <h3 class="back">HAPPY BIRTHDAY NOONY!</h3>
-          <p>From Your Youssey</p>
-          <p>
-            Happy BirthdaY To My Girl, My therapist, My
-            Partner in all things The important, The silly,
-            the wonderful and My companion at all times 
-            Life Wouldn't Be The Same Without you
-            Here's Another Year Of Laughing Together , Messing Up Together And Make It Together
-            <br>
-            Happy Birthday To My Soulmate,
-            <br>
-            My Better Half..
-            <br>
-            AND THE MOST AMAZING GIRL ON THE PLANET 🌍❤️🥰
-          </p>
-          <p>I Love You soooo much <3 </p>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Happy Birthday ellie</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="body">
+    <div class="birthdayCard">
+      <div class="cardFront">
+        <img src="https://github.com/DzarelDeveloper/Img/blob/main/ballon.png?raw=true" class="balloons"
+          alt="balloons" />
+        <img src="https://github.com/DzarelDeveloper/Img/blob/main/hat.png?raw=true" alt="bdHat" class="bdHat" />
+        <img src="https://i.postimg.cc/Wpmgcqxr/R.png" alt="cake" class="cake" />
+        <h2 class="happy">Happy Birthday Sweetie</h2>
+      </div>
+      <div class="cardInside">
+        <h3 class="back">HAPPY BIRTHDAY Ellie!</h3>
+        <p>From youussef</p>
+        <p>
+          Happy BirthdaY To My babygirl,It’s not just your birthday that makes today special — it’s you.
+          You honestly make everything feel a little lighter, a little brighter, just by being around.
+          I’m really lucky to have someone like you in my life
+          I hope this year brings you everything your heart quietly wishes for and maybe a little extra happiness from
+          the people who care about you (you know, like me).
+          Stay amazing, you deserve all the love today and always.
+          <br>
+          Happy Birthday To sweetheart,
+          AND THE MOST AMAZING GIRL ON THE PLANET 🌍❤️🥰
+        </p>
+        <p>I Love You soooo much <3 </p>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
 </body>
+
 </html>
